--- a/lang/ru-MD.json
+++ b/lang/ru-MD.json
@@ -13,6 +13,9 @@
     "subtitle22": "După înregistrarea a 10.000 de persoane, desemnăm un protest preliminar.",
     "text24": "După înregistrarea celor 10.000 de participanți vom organiza un protest preliminar. Atunci vom ieși, vom privi unul la celălalt ca să ne asigurăm că suntem 10.000 și mai mult. Ne vom convinge că suntem o forță, că suntem deciși, avem ce spune și merităm să fim ascultați. După asta, exact peste o săptămână va avea loc protestul general, care se va încheia în ziua în care vom obține rezultatul. Și anume: revenirea la tarifele existente în ziua de 01.10.2021",
     "text241": "și returnarea tuturor banilor achitați supra începând cu noiembrie 2021.",
+    "tarif1": "Gaz 200$",
+    "tarif2": "Tariful energiei electrice - 1,51 lei",
+    "tarif3": "Litru de motorină Combustibil - 17,48 lei",
     "text25": "Mai mult decât atât, o solicitare indispensabilă va fi echivalarea participanților înregistrați la protest, pentru merite în fața societății, cu participanții la acțiunile militare, cu achitarea pe viață din partea statului a unei prime în valoare de 50% din plata tuturor serviciilor comunale.",
     "text26": "Dacă în decurs de 2 ore de la convocarea protestului solicitările noastre nu vor fi îndeplinite, vom merge să blocăm instituțiile publcie, drumurile, rețelele de comunicare. La fel, solicitările noastre vor fi completate de dizolvarea Parlamentului și organizarea alegerilor anticipate.",
     "ol1": "Doar locuitorii din Chișinău și din suburbii se pot înscrie pentru proteste. Alți rezidenți ai țării se pot înscrie la protest în sine doar dacă participă atât la protestele pregătitoare, cât și la protestele principale.",
