--- a/lang/ru-RU.json
+++ b/lang/ru-RU.json
@@ -13,6 +13,9 @@
     "subtitle22": "После регистрации 10.000 человек мы назначаем предварительный протест.",
     "text24": "На него мы выходим и смотрим друг на друга и видим все 10.000 и больше. Когда мы убеждаемся, что мы сила, и мы полны решимости, с нами надо считаться, ровно через неделю назначается Генеральный протест, который не закончится, пока мы не получим результат. А именно: вернуть тарифы по состоянию на 01.10.2021.",
     "text241": "Вернуть все деньги, которые мы переплатили с ноября 2021 года.",
+    "tarif1": "Газ 200$",
+    "tarif2": "Тариф за электроэнергию - 1,51 лей",
+    "tarif3": "Литр диз. Топлива - 17,48 лей",
     "text25": "Кроме того, неотъемлемым требованием станет приравнивание зарегистрированных участников протестов, за заслуги перед обществом, к участникам боевых действий, с предоставлением пожизненной 50% скидки на оплату всех коммунальных платежей.",
     "text26": "Если в течении 2 часов наши требования не будут выполнены, то мы будем блокировать госучреждения, дороги, коммуникации. А также наши требования дополнятся требованием отставки Президента и Парламента с назначением досрочных выборов.",
     "ol1": "Зарегистрироваться в протестах могут только жители Кишинева и пригородов. Остальные жители страны могут зарегистрироваться только на самом протесте, если участвуют и в Подготовительном и в Основном протесте.",
